<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context="net.tsahaylu.www.ui.Activity_Welcome" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/welcome" />
    

    
	                      <ImageView
	                          android:id="@+id/Continue_with_Google"
                              android:layout_width="180dp"
                               android:layout_height="50dp"
	                          android:layout_gravity="center_horizontal"
	                          android:layout_marginTop="50dp"
                               android:onClick="LoginWithGoogle"
	                          android:src="@drawable/signin_google" />

                           <ImageView
                               android:id="@+id/Continue_with_Facebook"
                               android:layout_width="180dp"
                               android:layout_height="50dp"
                               android:layout_gravity="center_horizontal"
                               android:layout_marginTop="5dp"
                               android:adjustViewBounds="false"
                               android:onClick="LoginWithFacebook"
                               android:src="@drawable/signin_facebook" />
                  
                           <ImageView
                               android:id="@+id/Continue_with_Twitter"
                               android:layout_width="180dp"
                               android:layout_height="50dp"
                               android:layout_gravity="center_horizontal"
                               android:layout_marginTop="5dp"
                               android:adjustViewBounds="false"
                               android:onClick="LoginWithTwitter"
                               android:src="@drawable/signin_twitter" />
                           
      						<TextView
      						    android:id="@+id/sign_UP"
      						    android:layout_width="180dp"
      						    android:layout_height="20dp"
      						    android:layout_gravity="center_horizontal"
      						    android:layout_marginTop="5dp"
      						    android:onClick="StartSignup"
      						    android:text="@string/sign_up" />
                           
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp" >
                   
          	<TextView
          	    android:id="@+id/have_an_account"
          	    android:layout_width="wrap_content"
          	    android:layout_height="fill_parent"
          	    android:layout_gravity="center_horizontal"
          	    android:layout_weight="3"
          	    android:gravity="center_horizontal"
          	    android:maxLines="1"
          	    android:text="@string/have_an_account"
          	    android:textSize="15sp" />
           	
           	<TextView
           	    android:id="@+id/login"
           	    android:layout_width="wrap_content"
           	    android:layout_height="fill_parent"
           	    android:layout_gravity="center_horizontal"
           	    android:layout_weight="3"
           	    android:clickable="true"
           	    android:maxLines="1"
           	    android:onClick="startLogin"
           	    android:text="@string/login"
           	    android:textSize="15sp" />
           	
         </LinearLayout>                  
         

</LinearLayout>
